--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -20,3 +20,27 @@ body{
 a.register-link:hover{
     color: lightblue;
 }
+.window-alert{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: none;
+}
+.alerting{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    height: 30vh;
+    background-color: white;
+    border-radius: 5px;
+    position: absolute;
+    left: 25%;
+    top: 25%;
+}
+.link{
+    display: nonesss;
+}
